[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perforce-review-agent"
version = "1.0.0"
description = "An agent that reviews code changes against a Perforce client"
readme = "perforce_review_agent/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
perforce-review-agent = "perforce_review_agent.agent:main"

[tool.pytest.ini_options]
testpaths = ["perforce_review_agent/tests"]
